🐛 FIX: Increase contrast for tags

--- a/material.css
+++ b/material.css
@@ -116,8 +116,8 @@
   --primary-l: 59%;
 
   --primary: hsl(var(--primary-h), calc(var(--primary-s) - 10%), var(--primary-l));
-  --primary-faint: hsl(var(--primary-h), calc(var(--primary-s) - 15%), 7%);
-  --primary-light: hsl(var(--primary-h), calc(var(--primary-s) - 10%), 27%);
+  --primary-faint: hsl(var(--primary-h), calc(var(--primary-s) - 15%), 17%);
+  --primary-light: hsl(var(--primary-h), calc(var(--primary-s) - 10%), 37%);
   --primary-dark: hsl(var(--primary-h), calc(var(--primary-s) - 20%), 60%);
 
   /* Secondary (Default secondary in Hex: #bbce5d)*/
@@ -126,7 +126,7 @@
   --secondary-s: var(--primary-s);
   --secondary-l: var(--primary-l);
 
-  --secondary: hsl(var(--secondary-h), var(--secondary-s), var(--secondary-l));
+  --secondary: hsl(var(--secondary-h), calc(var(--secondary-s) - 10%), var(--secondary-l));
   --secondary-faint: hsl(var(--secondary-h), var(--secondary-s), 93%);
   --secondary-light: hsl(var(--secondary-h), var(--secondary-s), 73%);
   --secondary-dark: hsl(var(--secondary-h), var(--secondary-s), 40%);
